--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
+@import url('https://fonts.googleapis.com/css2?family=Libre+Franklin&display=swap');
+
+body {
+  font-family: 'Libre Franklin', sans-serif;
+  background-color: #F0EBD8;
+}
